--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -1,88 +1,60 @@
 # LESSONS LEARNED FROM CASE STUDY APPLICATIONS
 
-To be completed.
 
-* Synthesize main results and conclusions from case studies
+## CU-LEVEL BENCHMARKS AND ASSESSMENTS
 
-<!--CH: both ppn-based and aggregate-abudnance based LRPs rely on CU level assessmnts, so I've revised the headings a bit-->
+LRPs described in this working paper rely on CU-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate-abundance based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment benchmarks, habitat-based benchmarks, and percentile-based benchmarks. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of multidimensional assessments within the Pacific Salmon Status Scanner to Inside Southcoast Chum - Non Fraser. 
 
-## CU-level benchmarks and assessments
-<!--## Proportion-based LRPs-->
-
-<!--CH: I think the main point of this paragraph is that data on component CUs vary in quality and quantity. I've suggested some rewording--> 
-
-LRPs described in this working paper rely on CU-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate-abundance based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment benchmarks, habitat-based benchmarks, and spawner abundances percentile-based benchmarks. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of the Rapid Multidimensional Scanner Tool to Inside Southcoast Chum - Non Fraser. 
-
-At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark ($S_{gen}$ or percentiles) resulted in similar status assessments to using the Rapid Multidimensional Scanning Tool. <!--BC:These sentences seem to contradict themselves. -->  These similarities occur because when the lower benchmarks estimates are available, the rapid multidimensional scanning tool will almost always default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho study case for 1 CU in 3 years<!--correct me I'm wrong on numbers here KH-->. In these cases, the Rapid Multidimensional Scanning Tool triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached. 
+At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark (S~gen~ or percentiles) resulted in similar status assessments to using the Pacific Salmon Status Scanner. <!--BC:These sentences seem to contradict themselves. CH: I don't understant where the contradiction is-->  These similarities occur because when lower benchmark estimates are available, the Salmon Scanner tool will usually default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho study case for 1 CU in 3 years<!--correct me I'm wrong on numbers here KH-->. In these cases, the Salmon Scanner triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached.
 
 
-In addition, we found that using the Rapid Multidimensional Scanning Tool allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Rapid Multidimensional Scanning Tool is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast Chum case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CU with low levels of synchrony in which data deficient CUs cannot be represented by proxy. The status assessment based on trends is also useful when the CUs lacking lower benchmark estimates are small. Representing small CUs by proxy is problematic because the small CUs tend to be more vulnerable than larger CUs even if productivity is similar (cite). 
+In addition, we found that using the Salmon Scanner allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Salmon Scanner is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast Chum case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs with low levels of synchrony in which data deficient CUs cannot be represented by proxy. <!--CH: I think the criteria for 'proxy' account for differences in size, i.e., criteria 4: small CUs can't be represented by large CUs, so I think these last 2 sentences can be omitted.  "The status assessment based on trends is also useful when the CUs lacking lower benchmark estimates are small. Representing small CUs by proxy is problematic because the small CUs tend to be more vulnerable than larger CUs even if productivity is similar (cite)."--> 
 
-<!--CH: this section needs to be informed by a discussion of CU-representativeness within each SMU (i.e., 4 criteria outlines in Ch 4 of Guidelines WP). My guess is that for WCVI CK, the threats are different enough that we could expect independent dynamics, e.g., not representative of each other, and this is likely the same for ISC chum. However, I'm not sure about IFR coho; the one v small CU might be considered independent of the others because it's so small, but the remaining 4 might be sufficiently similar to be representative?. 
-
-The question is, do we think that data-rich CUs (or CUs included in analyses) are representative of data-limited CUs (or those excluded) such that their exclusion shouldn't matter, or do we think that data-rich CUs are NOT representative of data-limited CUs so we expect a difference in SMU-level status when we include/exclude the additional CUs?  This will affect how we frame this section; either further supporting the four 'representativeness' criteria from the Guidelines WP, or, more likely, suggesting caution even when those guidelines are implemented.-->
-
-<!--
-CW: I am not sure I have enough expertise to say if the CU in the study cases are representative or not of missing CUs. 
-However, I think we could see differences in SMU-level status even when CUs with data are representative of missing CUs. -- Thinking in a purely statistical sense here, if you add more populations, you are more likely to see one of them breach lower benchmark-- just due to random variability. So I would say that exclusion of CUs should always matter, but there is a much higher concern when covariation is low or the data deficient CU is really small.  
-
-Also I am wondering what we mean by "suggesting caution even when those guidelines are implemented": Can we give more concrete examples of caution? prioritize monitoring for data deficient CUs? assess the threats experienced by each CU and whether they are likely to increase, decrease or remain stable. 
- -->
+For example, for Inside South Coast Chum - Non Fraser, we found that status relative to LRP changed as additional data-limited CUs were considered using the Salmon Scanner, which could not be assessed using single-metric on spawner abundances relative to percentile-based benchmarks. These data-limited CUs have unique biological and landscape characteristics, such that the data-rich CUs in this SMU are not appropriate indicators for their status. <!--CH: Luke does this sound okay?-->
 
 
 
-## SMU-level LRPs and assessments
+## PROPORTION-BASED LRPS
 
- All of the LRP estimation methods we considered were based on status estimates for component CUs; regardless of whether it was a proportion-based or abundance-based method. As a result, the reliability of LRP estimates is a function of the reliability of individual CU status estimates. The effect of uncertainty in CU-level benchmarks on resulting estimates of LRP status was apparent in the Interior Fraser Coho case study where two different structural assumptions in stock recruitment model fit were considered. These two model fits resulted in different estimates of productivity and carrying capacity for individual CUs, as well as different estimates of Sgen. These two different model formulations resulted in different estimates of SMU status relative to LRPs over time for all LRP estimation methods considered for Interior Fraser Coho.
+The reliability of proportion-based LRP estimates depends on the reliability of individual CU status estimates. The effect of uncertainty in CU-level benchmarks on resulting estimates of LRP status was apparent in the Interior Fraser Coho case study where two different structural assumptions in stock-recruitment model fit were considered. These two model fits resulted in different estimates of productivity and carrying capacity for individual CUs, as well as different estimates of S~gen~. These two model formulations resulted in different estimates of SMU status relative to LRPs for all estimation methods considered for Interior Fraser Coho. In addition to the form of the stock-recruitment model, CU-statuses and hence SMU-level LRPs and statuses can be sensitive to the metric used to for CU assessments (e.g., spawner abundances relative to a lower benchmark vs. the distribution of spawners, as considered in the Interior Fraser River Coho case study).  
+<!--CH note for discussion at meeting?: Additional point that LRPs will vary over time with underlying stock-recruitment (or percentile benchmarks). This is mentioned with the IFR coho retrospective analysis removing years of data. LRPs were more temporally variable when based on SR benchmarks (which themselves varied over time) compared with distribution based benchmarks which were static. This is a point we make in the guidelines paper. If we can point to it in our results it would be good, even if the evidence isn't super strong.-->
 
-
-
-We found that removing component CUs from assessments impacted the SMU-level status, resulting in SMU assessments that may be more pessimistic or optimistic than when all CUs are considered, depending on the level of covariation among CUs, status of other component CUs and, CU sizes. <!--CH: I suggest we broaden this pgh to refer to both ppn-based and aggregate-abudnance based LRPs. Kendra shows this point best for logistic-regression based LRPs, but not ppn-based LRPs. While Luke shows variability in whether LRP is breached among data sets, that section does not show variability in status (% of CUs above red) per se, like Kendra does. And I don't show it at all for WCVI CK --> There is, however, and asymmetry in how missing CUs may affect the SMU status. If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone. This asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs.<!--CH: Note to add this to Guidelines paper. This asymmetric property of both ppn-based and to a lesser extent these aggregate-abundance based LRPs is a characteristic we should highlight and cautious about; is a result of LRPs considering dynamics of component stocks that vary independently. -->
-
+The decision on which structural form or type of benchmark to consider depends on the biological characteristics of the populations and available data, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. The challenge of identifying the most appropriate model form is pervasive across fisheries stock assessments and brings risks of basing assessments on incorrect or incomplete model forms. In our case studies we identify several approaches for addressing this challenge, such as implementing sensitivity analyses to various assumptions and aggregate abundance-based LRPs, ensemble modeling where outputs from various assumptions are combined in a probabilistic way.
 
 
-For SMUs with component CUs that vary independently of each other, the inclusion of additional CU-level assessments will increase the likelihood of the proportion-based LRP being breached. For example, for the Inside South Coast Chum case study, when data-limited CUs were included in the derivation of proportion-based LRPs (i.e., CUs without percentile-based benchmarks), the proportion-based LRP was breached more often in historical analyses compared to when those CUs were excluded. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. Our results from this case study highlight the importance of including data from all CUs when CUs show high variability in status estimates. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs and hence can be omitted from SMU-level LRPs and assessments is provided in Holt et al. (in review).
-
-
-For both proportion-based and aggregate-abundance based LRPs, we found that status assessments were sensitive to assumptions about the structural form of the underlying spawner-recruitment model used to estimate the lower benchmark, $S_{gen}$, and to considerations of different types of lower benchmarks, e.g., those reflecting distribution of spawners as considered in the Interior Fraser River Coho case study. The decision on which structural form or type of benchmarks to consider depends on the biological characteristics of the populations and available data, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. This challenge of identifying the most appropriate model form is pervasive across fisheries stock assessments and brings risks of basing assessments on incorrect or incomplete model forms. In our case studies we identify several approaches for addressing this challenge, such as implementing sensitivity analyses to various assumptions and ensemble modeling where outputs from various assumptions are combined in a probabilistic way.
-
-
-
-
-
+In addition, we found that removing component CUs from assessments impacted SMU-level status, resulting in SMU assessments that may be more pessimistic or optimistic than when all CUs are considered, depending on the level of covariation among CUs, status of other component CUs and, CU sizes. <!--CH: I add in this caveat specifying proportion-based LRPs in the next sentence. Does that make sense? It's much more convoluted for agg abund-based LRPs-->However, for proportion-based LRPs in particular, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the proportion-based LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone, as seen for Inside South Coast Chum - Non Fraser. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. These results highlight the importance of including data from all component CUs when possible. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs and hence can be omitted from SMU-level LRPs and assessments is provided in Holt et al. (in review). We recommend that  CU-level assessments and decisions about CU representativeness when developing SMU-level LRPs be peer-reviewed to ensure they result in robust and reliable LRPs.<!--CH: suggest we remove following sentence, as I'm not sure who would have this disincentive "The asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs"-->
 
 
 
 ### Logistic regression-based LRPs
 
 
-Logistic regression-based LRPs are empirically derived from the past observations of SMU abundance and CU statuses. By fitting a logistic regression to these historical data, we identify historical abundance levels associated with probabilities that all component CUs have statuses above their lower benchmarks. Similarly to the proportion-based LRP, this aggregate abundance method depends on the outcomes of individual CU assessments, which are sensitive to structural assumptions underlying the CU-level benchmarks and data availability. Logistic regression-based LRPs could only be estimated for one of our three case study SMUs, which suggests that they may only be an option for a small proportion of SMUs. Logistic regression models could not be reliably fit for WCVI Chinook and South Coast Chum SMUs. In the case of WCVI Chinook, lack of contrast in available data was the key limitation, while in the case of South Coast Chum, the limitation was an apparent lack of an underlying relationship between CU status and aggregate SMU abundances. Even for Interior Fraser Coho where a logistic regression fit was possible, estimates did not converge for all retrospective years, and status estimates were sensitive to missing data. Taken together, our exploration of logistic regression LRPs for our three case studies highlighted several key limitations and disadvantages with this approach.
+Logistic regression-based LRPs are empirically derived from past observations of SMU abundance and CU statuses. By fitting a logistic regression to historical data, we identified historical abundance levels associated with probabilities that all component CUs have statuses above their lower benchmarks. Similar to the proportion-based LRP, this aggregate abundance-based method depends on the outcomes of individual CU assessments, which are sensitive to structural assumptions underlying the CU-level benchmarks and data availability. Logistic regression-based LRPs could only be estimated for one of our three case study SMUs, which suggests that they may only be an option for a small proportion of SMUs. Logistic regression models could not be reliably fit for WCVI Chinook and Inner South Coast Chum SMUs. In the case of WCVI Chinook, lack of contrast in available data was the key limitation, while in the case of South Coast Chum, the limitation was an apparent lack of an underlying relationship between CU statuses and aggregate SMU abundances. Even for Interior Fraser Coho where a logistic regression fit was possible, estimates did not converge for all retrospective years, and status estimates were sensitive to missing data. Taken together, our exploration of logistic regression LRPs for our three case studies highlighted several key limitations and disadvantages with this approach.
 
 
 
-There are several disadvantages of the logistic regression-based LRPs. First, our implementation of logistic-regression LRPs relied on a single metric for CU assessments, such as $S_{gen}$ or the distributional target method applied to the Interior Fraser Coho study case study, which is not consistent with the recommendation to to apply the Rapid Multidimensional Scanner tool for CU assessments within proportion-based LRPs. We did not include CU assessments based on the multidimensional approach for logistic-regression based LRPs in part because those statuses include trend metrics which introduce autocorrelation into CU statuses, a violation of logistic regression model (see Section 2 for more  details). 
+There are several disadvantages of the logistic regression-based LRPs. First, our implementation of logistic-regression LRPs relied on a single metric for CU assessments, such as S~gen~ or the distributional target method applied to the Interior Fraser River Coho study case study, which is not consistent with the recommendation to to apply the Pacific Salmon Status Scanner for CU assessments within proportion-based LRPs. We did not include CU assessments based on the Salmon Scanner for logistic-regression based LRPs in part because those statuses include trend metrics which introduce autocorrelation into CU statuses, a violation of logistic regression model (see Section \@ref(MethodsChapter) for more details). 
 
-Second, logistic regression-based LRPs are only estimable when there are years when all CUs or sub-populations are above their lower benchmark and years when at least one CU is below their lower benchmarks. This was not the case for the WCVI Chinook study case due to one inlet always been below its lower benchmark. 
-<!-- KH: I wonder if this second point could be made more general to say that a limitation is that they are limited to conditions that have been historically observed. This can be a problem when there is poor contrast in historical data, as was the case for WCVI Chinook.  In this case, there were not years when all CUs or inlets were above their lower lower becnhmarks; howeever, it could equally apply to the opposite case where no CUs were observed to drop below their lower benchmark.  The dependence on hisorically observed conditions would also be a problem in there were changes in the synchrony of spawning abundances over time such that among-CU correlation changed over time. --> 
 
-Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated. For these SMUs, the aggregate abundances are not a significant indicator of individual CU statuses. Here, we found that logistic regression-based LRPs were estimable for interior Fraser Coho (average correlation within CUS of 0.43) <!--I remember seeing the values of correlation between CU escapements(?), but I cannot find it in the current text. Where could I find those numbers? --> but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of XX). Also, the wide rand in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic-regression based LRPs.
+Second, logistic regression-based LRPs are limited to conditions that have been historically observed. This can be a problem when there is poor contrast in historical data, as was the case for WCVI Chinook.  In this case, there were no years when all component inlets were above their lower benchmarks. However, similar challenges could occur in cases where no CUs drop below their lower benchmarks.  The dependence on historically observed conditions is a further limitation if there were changes in correlations in populations dynamics among CUs over time such that current or further correlations are not represented by historical data.
 
-<!-- CH: I think this is the same concept as mentioned in the text above for SMU assessmetns in general.  Is there something different about missing data with logistic regression LRPs that we can highlight. Otherwise omit this pgh?-->Missing data for individual CUs within an SMU may also pose a problem for the estimation of logistic regression-based LRPs. When data are missing for one or more CUs within and SMU, it may still be appropriate to apply the logistic regression-based LRP to the remaining CUs with data to assess status for the entire SMU. This is particularly true if there are high levels of covariation between the CUs. However, the logistic regression model fit will degenerate as the number of CUs with missing data increases. Sensitivity analysis for the Interior Fraser Coho study case showed that the model fit degenerated when two CU data sets were removed from the analysis. The influence of missing data was also dependent on the status of the CU for which data was missing. The omission of a CU with red status will be more influential that omitting data for a CU with amber or green status <!--CH I think this comes down to if they covary or not, and more specifically if they meet the 4 criteria for reprsenativeness. WE don't actually know if they covary if they are data-limited or data-deficient, hence we have to rely on the criteria. --> because the red status would trigger the LRP and change the SMU status for the logistic regression, biasing the aggregate abundance LRP to lower values. 
+Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression-based LRPs were estimatable for interior Fraser Coho (average correlation within CUS of 0.43), but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of 0.12. Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic-regression based LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
 
-<!--CH: maybe combine with 3rd challenge above? I suggest some text above, so could omit this here?-->Finally, it is important to inspect model diagnostics and statistically test the model assumptions whenever applying the logistic regression-based LRPs. In chapter \@ref(lrp-estimation-methods) we provide a list of model diagnostics that should be checked when applying this aggregate abundance LRP estimation method. In addition, we illustrate how the diagnostics are used in support of the model fit in chapter \@ref(IFCChapter), and against the model fit in the \@ref(ISCchumChapter).    
 
-<!--CH: Additional point that LRPs will vary over time with underlying stock-recruitment (or percentile benchmarks). This is mentioned with the IFR coho retrospective analysis removing years of data. LRPs were more temporally variable when based on SR benchmarks (which themselves varied over time) compared with distribution based benchmarks which were static. This is a point we make in the guidelines paper. If we can point to it in our results it would be good, even if the evidence isn't super strong.-->
+Similar to proportion-based LRPs, CUs without reliable data poses a problem for the estimation of logistic regression-based LRPs. When CUs abundances covary strongly, it may be possible to use data-rich CUs as indicators for data-limited CUs. However, in our case study on Interior Fraser River Coho, we found that logistic regression-based LRPs were more uncertain when more than 1 CUs was missing. 
+
+
 
 ### Projection based LRPs
 
 <!--
 CW Question: Why did we not apply the projection-based LRP to the Chum study case? Was is because we had no means of estimating the SR parameters for the Chum CUs? If that is the case, would it be correct to say that the projection-based LRP is not appropriate for data poor scenarios? 
-
+CH: we didn't have plausible productivity & capacity values (and didn't have time to work with the un-reviewwed values provided by stock assessment staff)
 -->
 
-The projection-based LRPs approach relies on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirement for our implementation of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU, and covariance in dynamics among them. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see Interior Fraser Coho study case, chapter \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook study case, chapter \@ref(WCVIchinookChapter)). 
+The projection-based LRPs approach relies on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirements for this approach are CU-specific estimates of productivity and capacity, and covariance in recruitment among CUs. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see Interior Fraser Coho study case, Section \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook study case, Section \@ref(WCVIchinookChapter)). 
 
-The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics via consideration of alternative future scenarios. For example, for the WCVI Chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and  variability in exploitation among inlets. For the Interior Fraser Coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
+The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics and consideration of alternative future scenarios. For example, for the WCVI Chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and  variability in exploitation among inlets. For the Interior Fraser Coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
 
 We also demonstrated that projection-based LRPs are sensitive to the assumed levels of exploitation in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability in stock-recruitment parameters among CUs increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(app:ERsensitivity-appendix). <!--CH I'm not clear what is meant by this sentence, which I may written??: "This feature of the approach could be used in future exercises to identify the optimum levels of exploitation, to ensure that the aggregate abundance LRP is in line with current observed abundances."
 I suggest replacing with:--> Therefore projection-based LRPs developed under historical and current exploitation rates cannot necessarily be used as a basis for evaluating alternative management procedures. However demonstrating the changes in aggregate abundances required for all CUs to be above lower benchmarks (i.e. changes in projection-based LRP) under different exploitation scenarios may help analysts and managers understand the implications of changing exploitation rates on the ability to achieve WSP objectives.
@@ -90,14 +62,13 @@ I suggest replacing with:--> Therefore projection-based LRPs developed under his
 
 
 
-
-<!-- KH:
+<!-- KH: (CH: I think the first three are captured, but could add the last if there is interest...?)
 
 I wonder if another discussion topic could be the dependence of LRP estimates on reliable estimates of CU status.    
-
 E.g.,:
 CW:opening paragraph of SMU-level LRPs and assessments
 All of the LRP estimation methods we considered were based on status estimates for component CUs; regardless of whether it was a proportion-based or abundance-based method. As a result, the reliability of LRP estimates is a function of the reliability of individual CU status estimates. The effect of uncertainty in CU-level benchmarks on resulting estimates of LRP status was apparent in the Interior Fraser Coho case study where two different structural assumptions in stock recruitment model fit were considered. These two model fits resulted in different estimates of productivity and carrying capacity for individual CUs, as well as different estimates of Sgen. These two different model formulations resulted in different estimates of SMU status relative to LRPs over time for all LRP estimation methods considered for Interior Fraser Coho.    
+
 
 - Could we also draw on Carrie's sensitivity analysis of productivity when estimating projected LRPs here?  Different productivity assumptions led to different Sgens, which lead to different LRPs.
 
